Name:                z3
Version:             4.0.0
Synopsis:            Bindings for the Z3 Theorem Prover
Description:
    Bindings for the Z3 Theorem Prover (<http://z3.codeplex.com>).
    .
    Low-level bindings to the Z3 API are provided by "Z3.Base", this API is
    still incomplete but pretty much stable.
    .
    A simple but convenient wrapper for "Z3.Base" is provided by "Z3.Monad".
    .
    Important notes:
    .
    * Installation (Unix-like): Just be sure to use the standard locations for
    dynamic libraries (\/usr\/lib) and header files (\/usr\/include), or else
    use the --extra-lib-dirs and --extra-include-dirs Cabal flags.
    .
    * Haddock documentation can be found at
    <http://www.iagoabal.eu/z3-haskell/doc/0.3.2>.
    .
    * Hackage fails to compile this package because of the (unsatisfied) /libz3/
    dependency.
    .
    A changelog is available at <https://bitbucket.org/iago/z3-haskell/src/tip/CHANGES.md>
Homepage:            http://bitbucket.org/iago/z3-haskell
License:             BSD3
License-file:        LICENSE
Author:              Iago Abal <mail@iagoabal.eu>,
                     David Castro <david.castro.dcp@gmail.com>
Maintainer:          Iago Abal <mail@iagoabal.eu>,
                     David Castro <david.castro.dcp@gmail.com>
Copyright:           2012-2014, Iago Abal, David Castro
Category:            Math, SMT, Theorem Provers, Formal Methods
Build-type:          Simple
Cabal-version:       >= 1.8

source-repository head
  type:     mercurial
  location: https://bitbucket.org/iago/z3-haskell

Library
    hs-source-dirs: src

    Exposed-modules:

        Z3.Base

        Z3.Opts

        Z3.Monad

    Other-modules:

        Z3.Base.C

    ghc-options: -Wall -Werror

    -- Ban to mtl-2.1: modify in MonadState causes <<loop>> in mtl-2.1
    Build-depends:       base >= 4.5,
                         containers,
                         mtl > 2.1

    Build-tools:         hsc2hs
    Extensions:          FlexibleInstances
                         FlexibleContexts
                         ForeignFunctionInterface
                         MultiParamTypeClasses

    Other-extensions:    DeriveDataTypeable
                         EmptyDataDecls
                         GeneralizedNewtypeDeriving
                         PatternGuards

    includes:            z3.h

    -- In OS X libz3 is linked statically against libgomp.
    -- In Windows Z3 is compiled using MS C++.
    if os(darwin) || os(windows)
        extra-libraries:     z3
    else
        extra-libraries:     gomp z3 gomp

Flag examples
     Description: Build examples.
     Default: False
     Manual: True

Executable examples
  if flag(examples)
    Buildable:         True
    Build-depends:     base >=4.5,
                       z3 >=0.4,
                       containers,
                       mtl >2.1
  else
    Buildable:         False

  Hs-source-dirs:      examples
  Main-Is:             Examples.hs

Test-suite spec

    Type:               exitcode-stdio-1.0

    Ghc-options:        -Wall

    Extensions:         ScopedTypeVariables

    Hs-source-dirs:     test

    Main-is:            Spec.hs

    Build-depends:      base >= 4.5,
                        z3 >= 0.4,
                        hspec >= 2.1,
                        QuickCheck >= 2.5.1
